@@ -62,6 +62,9 @@ public class MicronautCodeRunner implements Callable<TryResult> {
         TryResult either;
         String scriptName = SCRIPT_NAME;
         try {
+            theOutput.setOutputHandler();
+
+            // this is needed to redirect output to the correct place. Just need to figure out why it breaks sometimes?
             // create stdin (the one in the seo is private, but unused)
             BxInputStream stdInHandler = new BxInputStream(evaluator.getKernel(), new InputRequestMessageFactoryImpl());
 
@@ -72,13 +75,16 @@ public class MicronautCodeRunner implements Callable<TryResult> {
                     stdInHandler
             );
 
+            logger.trace("stdInHandler="+stdInHandler);
+            logger.trace("stdOutputHandler="+theOutput.getStdOutputHandler());
+            logger.trace("stdErrorHandler="+theOutput.getStdErrorHandler());
+
             Object result = null;
-            theOutput.setOutputHandler();
             Thread.currentThread().setContextClassLoader(evaluator.getGroovyClassLoader());
             scriptName += System.currentTimeMillis();
             Class<?> parsedClass = evaluator.getGroovyClassLoader().parseClass(theCode, scriptName);
             if (canBeInstantiated(parsedClass)) {
-                Object instance = parsedClass.newInstance();
+                Object instance = parsedClass.getDeclaredConstructor().newInstance();
                 if (instance instanceof Script) {
                     result = runScript((Script) instance);
                 }
@@ -91,7 +97,8 @@ public class MicronautCodeRunner implements Callable<TryResult> {
             evaluator.getKernel().getStreamHandler().clearOutputHandlers();
             Thread.currentThread().setContextClassLoader(oldld);
         }
-        logger.trace("call() returning "+either);
+        // might be CellError which doesn't have result
+        // logger.trace("call() returning "+either.result());
         return either;
     }
 
